# claw

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: linux-build.yml
examples/: claw.rune
examples/themes/: catpuccin.rune  default.rune  dracula.rune  gruvbox.rune  nord.rune  solarized.rune
packaging/linux/: claw.desktop
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  config.rs  detect.rs  history.rs  lib.rs  theme.rs  tray.rs  utils.rs  watchers.rs  window.rs
src/lib/api/: clipboard.ts  keybinds.ts
src/lib/components/: History.svelte  Statusbar.svelte  Titlebar.svelte
src/lib/stores/: historyStore.ts  uiStore.ts
src/routes/: +layout.svelte  +page.svelte
