[package]
name = "claw"
version = "1.1.0"
description = "Wayland & X11 compatible, simple clipboard manager"
authors = ["Dustin Pilgrim"]
license = "MIT"
repository = "https://github.com/saltnpepper97/claw.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
tauri = { version = "2.8.5", features = ["tray-icon"] }

# Wayland Clipboard
wl-clipboard-rs = "0.9.2"

# X11 Clipboard
x11-clipboard = "0.9.3"

# Utilities
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
eyre = "0.6.12"
notify = "8.2.0"
once_cell = "1.21.3"
rune-cfg = "0.1.32"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
regex = "1.11.3"
url = "2.5.7"

# Plugins
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-store = "2.4.0"
tauri-plugin-log = "2.7.0"
tauri-plugin-cli = "2.4.0"
